// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YourInfoForm renders 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action={undefined}
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Business contact name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          aria-describedby="contact_name-hint"
          className=""
          disabled={false}
          id="contact_name"
          maxLength={undefined}
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contact_email"
          maxLength={undefined}
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contact_phone"
          maxLength={undefined}
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="representative"
        >
          Authorised representative name
        </label>
        <p
          className="hint"
          id="representative-hint"
        >
          This is the person authorised to enter into contracts on behalf of the business. 
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          disabled={false}
          id="representative"
          maxLength={undefined}
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="email"
        >
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="phone"
          maxLength={undefined}
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        styleName="nav-row"
      >
        <button
          styleName="nav-button"
          type="submit"
        >
          Save and continue
        </button>
        <button
          className="save-button"
          onClick={[Function]}
          styleName="nav-button"
        >
          Save and finish later
        </button>
        <button
          className="button-secondary"
          onClick={[Function]}
          styleName="nav-link skip-button"
        >
          Skip for now
        </button>
      </div>
    </form>
  </article>
</div>
`;

exports[`YourInfoForm renders with edit mode 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Business contact name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          aria-describedby="contact_name-hint"
          className=""
          disabled={false}
          id="contact_name"
          maxLength={undefined}
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contact_email"
          maxLength={undefined}
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contact_phone"
          maxLength={undefined}
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="representative"
        >
          Authorised representative name
        </label>
        <p
          className="hint"
          id="representative-hint"
        >
          This is the person authorised to enter into contracts on behalf of the business. 
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          disabled={false}
          id="representative"
          maxLength={undefined}
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="email"
        >
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="phone"
          maxLength={undefined}
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        styleName="nav-row"
      >
        <button
          styleName="nav-button"
          type="submit"
        >
          Save and continue
        </button>
        <button
          className="save-button"
          onClick={[Function]}
          styleName="nav-button"
        >
          Save and finish later
        </button>
        <button
          className="button-secondary"
          onClick={[Function]}
          styleName="nav-link skip-button"
        >
          Skip for now
        </button>
      </div>
    </form>
  </article>
</div>
`;

exports[`YourInfoForm renders with form_options 1`] = `
<div
  className="layout"
>
  <header>
    <h1
      tabIndex="-1"
    >
      Contact details
    </h1>
  </header>
  <article
    role="main"
  >
    <form
      action="/foo/bar"
      id="yourinfo"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken"
      />
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_name"
        >
          Business contact name
        </label>
        <p
          className="hint"
          id="contact_name-hint"
        >
          The contact listed on your seller profile page and the person who receives new opportunities by email.
        </p>
        <input
          aria-describedby="contact_name-hint"
          className=""
          disabled={false}
          id="contact_name"
          maxLength={undefined}
          name="contact_name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_email"
        >
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contact_email"
          maxLength={undefined}
          name="contact_email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="contact_phone"
        >
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="contact_phone"
          maxLength={undefined}
          name="contact_phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="representative"
        >
          Authorised representative name
        </label>
        <p
          className="hint"
          id="representative-hint"
        >
          This is the person authorised to enter into contracts on behalf of the business. 
        </p>
        <input
          aria-describedby="representative-hint"
          className=""
          disabled={false}
          id="representative"
          maxLength={undefined}
          name="representative"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="email"
        >
          Email
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        className="field"
      >
        <label
          className="question-heading"
          htmlFor="phone"
        >
          Phone
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="phone"
          maxLength={undefined}
          name="phone"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          readOnly={undefined}
          type="text"
          value=""
        />
      </div>
      <div
        styleName="nav-row"
      >
        <button
          styleName="nav-button"
          type="submit"
        >
          Save and continue
        </button>
        <button
          className="save-button"
          onClick={[Function]}
          styleName="nav-button"
        >
          Save and finish later
        </button>
        <button
          className="button-secondary"
          onClick={[Function]}
          styleName="nav-link skip-button"
        >
          Skip for now
        </button>
      </div>
    </form>
  </article>
</div>
`;
